Fri Dec 31 01:35:09 2004  Tim Janik  <timj@gtk.org>

	* sfifilecrawler.c (errno_check_file): fixed mode="e", which
	didn't proeprly call access() due to F_OK==0.

Mon Dec 27 23:57:29 2004  Tim Janik  <timj@gtk.org>

	* sfiprimitives.[hc]: call sfi_ring_uniq() from sfi_ring_uniq_free_deep()
	if no destroy functions is given.

Mon Dec 27 03:42:17 2004  Tim Janik  <timj@gtk.org>

	* sfiprimitives.[hc]: added sfi_ring_uniq_free_deep() and
	sfi_ring_copy_deep_uniq(). made sfi_ring_uniq() more efficient by
	operating in place.

	* testsfi.c: test sfi_ring_copy_uniq().

Mon Dec 27 01:27:56 2004  Tim Janik  <timj@gtk.org>

	* sfiprimitives.c: document guaranteed properties (stable-ness,
	set precedence for duplicate elements, etc.) for ring functions.

Sun Dec 26 23:50:16 2004  Tim Janik  <timj@gtk.org>

	* sfilog.c: cosmetics, strip path from executable names if logging
	debugging info.

Fri Dec 24 22:48:19 2004  Tim Janik  <timj@gtk.org>

	* sfidl-corecxx.cc: there's no need to inline the choice 
	value accessor for enum types in generated code.

	* sfiparams.[hc]: allow provision of a choice value array for
	GEnum types by setting an accessor function with
	sfi_enum_type_set_choice_value_getter().

Mon Dec 20 15:03:57 2004  Tim Janik  <timj@gtk.org>

	* sfidl-corecxx.cc: call property_changed() in response to automated
	properties. changed property_changed() to return a bool which indicates
	whether update_modules() needs to be called after property_changed().
	adapted all usages.

Sun Dec 19 01:01:41 2004  Tim Janik  <timj@gtk.org>

	* sfiserial.c (sfi_serialize_primitives): relaxed parsing strictness 
	for booleans, so we parse any int and float as boolean now.

Thu Dec 16 01:57:36 2004  Tim Janik  <timj@gtk.org>

	* sfistore.c (sfi_rstore_new_open): fail to open directories,
	block devices or symbolic links.

Mon Dec  6 15:37:29 2004  Stefan Westerfeld  <stefan@space.twc.de>

	* sfidl-generator.cc(splitName): Fix splitting of "Bse::FFTSize" to